when I applied text-wrap: nowrap to '.profile-side-bar {' then I had fixed width of the sidebar------ but i can't use that---- I will have to find another solution

--- a/React - Django/frontend/src/App.css
+++ b/React - Django/frontend/src/App.css
@@ -929,7 +929,7 @@
   background-color: #fff;
   font-family: Roboto, Arial, Helvetica, sans-serif;
   font-size: 14px;
-  
+  text-wrap: nowrap;
   direction: ltr;
   margin-right: 8px;
   border-radius: 6px;
